argocd/traefik-config/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: traefik.io/ingress-controller
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels: {}
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
      annotations: {}
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api.insecure
            - --accesslog
            - --accesslog.filepath=/var/log/traefik/access.log
            - --log
            - --log.filepath=/var/log/traefik/traefik.log
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.file.directory=/etc/traefik/dynamic
            - --providers.file.watch=true
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          volumeMounts:
            - name: traefik-logs
              mountPath: /var/log/traefik
            - name: traefik-config
              mountPath: /etc/traefik/dynamic
      volumes:
        - name: traefik-logs
          emptyDir: {}
        - name: traefik-config
          configMap:
            name: traefik-config
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: traefik
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: websecure
    - protocol: TCP
      port: 8080
      name: admin
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: traefik
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
